@@ -25,6 +25,7 @@ import edu.colorado.phet.common.piccolophet.RichPNode;
 import edu.colorado.phet.common.piccolophet.nodes.FaceNode;
 import edu.colorado.phet.common.piccolophet.nodes.HTMLImageButtonNode;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
+import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
 import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.common.piccolophet.nodes.layout.HBox;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
@@ -70,13 +71,14 @@ public class NumberSceneNode extends PNode implements NumberDragContext, Fractio
         this.context = context;
 //        final PhetPText title = new PhetPText( MY_FRACTIONS, AbstractFractionsCanvas.CONTROL_FONT );
 
-        addChild( new BackButton( new VoidFunction0() {
+        final BackButton backButton = new BackButton( new VoidFunction0() {
             public void apply() {
                 context.goToLevelSelectionScreen();
             }
         } ) {{
             setOffset( AbstractFractionsCanvas.INSET, AbstractFractionsCanvas.INSET );
-        }} );
+        }};
+        addChild( backButton );
 
         //Create the scoring cells with target patterns
         ArrayList<Pair> pairs = new ArrayList<Pair>();
@@ -254,6 +256,16 @@ public class NumberSceneNode extends PNode implements NumberDragContext, Fractio
         faceNodeDialog.setChildrenPickable( false );
 
         addChild( faceNodeDialog );
+
+        int levelIndex = level;
+        double minScoreCellX = List.iterableList( pairList ).map( new F<Pair, Double>() {
+            @Override public Double f( final Pair target ) {
+                return target.patternNode.getFullBounds().getMinX();
+            }
+        } ).minimum( Ord.doubleOrd );
+        final PhetPText title = new PhetPText( "Level " + ( levelIndex + 1 ), new PhetFont( 32, true ) );
+        title.setOffset( ( minScoreCellX - AbstractFractionsCanvas.INSET ) / 2 - title.getFullWidth() / 2, backButton.getFullBounds().getCenterY() - title.getFullHeight() / 2 );
+        addChild( title );
     }
 
     public void endDrag( final NumberCardNode numberCardNode, final PInputEvent event ) {
